[fix] reduce padding between card and form, align card and form

--- a/src/components/CreatorPage/CreatorProfile/CreatorProfile.scss
+++ b/src/components/CreatorPage/CreatorProfile/CreatorProfile.scss
@@ -5,5 +5,6 @@
   text-align: left;
   &__area{
     @include center__element(row);
+    align-items: top;
   }
 }
