--- a/src/components/CreatorPage/CreatorProfile/CreatorProfileComponents/ProfileCard.scss
+++ b/src/components/CreatorPage/CreatorProfile/CreatorProfileComponents/ProfileCard.scss
@@ -4,7 +4,7 @@
   position: relative;
   padding: 3rem 2.5vw 4rem 2.5vw;
   width: 29rem;
-  margin: 0 auto;
+  margin: 0 2rem 0 0;
   background-color: black;
   border-radius: 12px;
   box-shadow: inset 0px 4px 20px rgba(170, 170, 170, 0.25);
